--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -1,49 +1,46 @@
+.users {
+  width: 450px;
+}
 .user {
-  width: 236px;
-  height: 218px;
-  margin: 14px 7px 0 7px;
+  width: 100%;
+  margin: 5px 7px 0 7px;
   padding: 5px 10px;
-  float: left;
 
   .profile-picture {
     float: left;
-    margin-bottom: 5px;
+    margin-right: 15px;
 
     img {
       border-radius: 3px;
-      width: 105px;
-      height: 105px;
+      width: 48px;
+      height: 48px;
     }
   }
-
-  .user-adverts {
-    float: right;
-    width: 105px;
-  }
-
-  .user-mini-advert {
+  .user-detail {
     float: left;
-    width: 47px;
-    height: 50px;
-    margin: 0 5px 5px 0;
-    background-color: #ccc;
+    width: 70%;
   }
-
-  .user-realname {
-    font-size: 14px;
-    font-weight: bold;
-    height: 15px;
-    margin-top: 5px;
-    margin-bottom: 10px;
+  .user-actions {
+    float: left;
   }
-
-  .user-score {
+  .user-info {
     margin-bottom: 5px;
     a {
       color: #999;
       font-size: 11px;
       font-weight: bold;
+      margin-right: 3px;
     }
+    a.realname {
+      font-size: 14px;
+      color: @gray;
+    }
+    .username {
+      font-size: 12px;
+    }
+  }
+  .btn {
+    padding: 4px 10px;
   }
 }
 
@@ -182,16 +179,4 @@ a.realname, a.username {
 
 .page-title {
   padding:0;
-}
-
-.user-action {
-  border-top: 1px solid @border-color;
-
-  .btn {
-    &:first-child {
-      border: 0;
-    }
-    border: 0;
-    border-left: 1px solid @border-color;
-  }
 }
