--- a/src/Adstacy/AppBundle/Resources/views/User/show_users.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_users.html.twig
@@ -4,10 +4,6 @@
   {% include 'AdstacyAppBundle:User:user_profile.html.twig' %}
 
   {% if paginator.getCurrentPageResults|length > 0 %}
-    <div class="page-title jumbotron text-center">
-      <h1>{{ tab|title }}</h1>
-    </div>
-
     <div class="adstacy-container jscroll clearfix">
       {{ block('ajax_content') }}
     </div>
@@ -31,9 +27,11 @@
 {% endblock %}
 
 {% block ajax_content %}
+  <div class="users">
   {% for following in paginator.getCurrentPageResults %}
     {% include 'AdstacyAppBundle:User:user.html.twig' with {user: following} %}
   {% endfor %}
+  </div>
   {% if paginator.hasNextPage %}
     {% set params = app.request.query.all|merge({username: user.username, page: paginator.getNextPage}) %}
     <a href="{{ path(route, params )}}" class="btn btn-default btn-lg btn-block load-next next-page">More</a>
