Design view more comments

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -116,9 +116,11 @@
   }
 }
 
+.advert-comments-container {
+  border-top: 2px solid @border-color;
+}
 .advert-comments {
-  padding: 10px 15px;
-  border-top: 1px solid @border-color;
+  padding: 5px 15px 10px 15px;
 
   .media,
   .media .media {
@@ -149,9 +151,10 @@
 }
 
 .load-more-comments {
-  border-width: 1px 0 0;
-  background: #eee;
-  height: 33px;
+  color: @brand-primary;
+  padding: 3px 0 0 0;
+  text-align: center;
+  height: 23px;
 }
 
 @media (min-width: 481px) {
