--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -23,8 +23,14 @@ body {
   }
 }
 
-.focus #search-form {
-  display: block;
+.focus {
+  #search-form {
+    display: block;
+  }
+
+  .navbar-right {
+    display: none;
+  }
 }
 
 .site-menu {
@@ -117,21 +123,41 @@ body {
   border: 1px solid @border-color;
 }
 
-// ----
 .navbar-toggle {
   float: left;
-}
-
-.site-menu-toggle {
   display: inline;
+  position: relative;
+  top: 2px;
+  margin-top: -2px;
+  border-width: 0 0 2px;
+
+  &:hover {
+    background-color: transparent;
+    border-color: @brand-primary;
+  }
 }
 
 .navbar {
+  border: solid @border-color;
   border-width: 0 0 2px;
 }
 
 .site-header a span {
   display: none;
+}
+
+.site-header {
+  .navbar-left,
+  .navbar-right {
+    position: relative;
+    top: 2px;
+    margin-top: -2px;
+
+    .icon {
+      font-size: 16px;
+      padding: 0 3px;
+    }
+  }
 }
 
 .nav > li {
@@ -140,25 +166,114 @@ body {
 }
 
 .navbar-brand {
-  color: @brand-primary;
-  padding: 15px 20px;
+  // color: @brand-primary;
+  // padding: 15px 20px;
   width: @site-menu-width;
-  text-align: center;
+  // text-align: center;
   border: solid @border-color;
   border-width: 0 1px;
+  display: none;
+  text-indent: -9999px;
+  background: url("../img/logo.png") center no-repeat;
+}
+
+#m-btn-search {
+  display: block;
+  border-bottom: 2px solid transparent;
+
+  &:hover {
+    border-color: @blue-accent;
+  }
+}
+
+.twitter-typeahead {
+  width: 100%;
+}
+
+#search-form {
+  width: 320px;
+  position: relative;
+  top: 2px;
+  margin-top: -2px;
+  display: none;
+
+  .form-control {
+    height: 52px;
+    position: absolute;
+    width: 100%;
+    // z-index: 3000;
+    padding: 10px 35px 10px 15px;
+    .box-shadow(none);
+
+
+    &:focus {
+      .box-shadow(none);
+      border-color: @blue-accent;
+    }
+  }
+}
+
+#btn-search {
+  padding: 0;
+  cursor: pointer;
+  background: transparent;
+  border: 0;
+  -webkit-appearance: none;
+  position: absolute;
+  width: 20px;
+  line-height: 50px;
+  right: 15px;
+  // z-index: 5000;
+
+  .icon-search:before {
+    margin: 0;
+  }
+}
+
+/** Hide header mobile components **/
+#mobile-login-link {
+  display: none;
+}
+
+#create-advert-btn {
+  border-bottom: 2px solid transparent;
+
+  &:hover {
+    border-color: @purple-accent;
+  }
+}
+
+#notif-btn {
+  border-bottom: 2px solid transparent;
+
+  &:hover {
+    border-color: @green-accent;
+  }
+}
+
+@media (max-width: 599px) {
+  .search-container {
+    margin-left: 60px;
+
+    #search-form {
+      width: 100%;
+    }
+  }
 }
 
 @media (min-width: 481px) {
-
 }
 
 @media (min-width: 600px) {
   #search-form {
-    margin-left: 240px;
+    // margin-left: 240px;
   }
 
-  .site-menu-toggle {
+  .navbar-toggle {
     display: none;
+  }
+  .navbar-brand {
+    display: block;
   }
 
   .site-header a span {
@@ -166,7 +281,7 @@ body {
   }
 
   .site-content {
-    margin-left: 240px;
+    margin-left: @site-menu-width;
     width: auto;
   }
 
@@ -180,7 +295,12 @@ body {
 }
 
 @media (min-width: 720px) {
-
+  #m-btn-search {
+    display: none;
+  }
+  #search-form {
+    display: block;
+  }
 }
 
 @media (min-width: 960px) {
@@ -234,47 +354,6 @@ body {
   }
 }
 
-#search-form {
-  position: relative;
-  display: none;
-
-  .close {
-    position: absolute;
-    width: 20px;
-    line-height: 50px;
-    color: #fff;
-    font-size: 24px;
-    right: 15px;
-    z-index: 5000;
-  }
-
-  .form-control, .icon-search {
-    height: 50px;
-    color: #fff;
-    background-color: #222;
-    border: solid #080808;
-    border-width: 0 1px;
-    padding: 10px 15px;
-    .box-shadow(inset 0 0 1px 1px rgba(255,255,255,.1));
-  }
-
-  .form-control {
-    position: absolute;
-    width: 100%;
-    z-index: 3000;
-    padding: 10px 35px 10px 15px;
-  }
-}
-
-#btn-search {
-  .box-shadow(inset 0 0 1px 1px rgba(255,255,255,.1));
-}
-
-/** Hide header mobile components **/
-#mobile-login-link {
-  display: none;
-}
-
 /** Responsive **/
 @media screen and (max-width: @screen-tablet) {
   // Hide Components
@@ -291,13 +370,8 @@ body {
   }
 
   // Adjust Components
-  #search-container,
   #search-box {
     width: 100% !important;
-  }
-  #search-container {
-    padding: 0 15px;
-    padding-bottom: 8px;
   }
   #register-link {
     display: block;
