--- a/src/Adstacy/AppBundle/Resources/public/less/variables.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/variables.less
@@ -1,8 +1,8 @@
 @import "./bootstrap/variables.less";
 
 @body-bg:                     #eee;
+// @brand-primary:               #b00;
 @brand-primary:               #ff1e00;
-// @brand-primary:               #99e58c;
 @input-border-focus:          #bbb;
 @jumbotron-color:             #333;
 @jumbotron-bg:                transparent;
@@ -20,6 +20,16 @@
 @border-radius-base:          0;
 @border-radius-large:         0;
 @border-radius-small:         0;
+
+// Color accent
+@green-accent:                #67e300;
+@purple-accent:               #b53ad4;
+@blue-accent:                 @brand-info;
+
+// Navbar toggle
+@navbar-default-toggle-hover-bg:           transparent;
+@navbar-default-toggle-icon-bar-bg:        #ccc;
+@navbar-default-toggle-border-color:       transparent;
 
 // Basics of a navbar
 @navbar-margin-bottom:             0;
