--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -51,10 +51,22 @@
       {% endif %}
     </div>
     <div class="btn-group pull-right">
-      <a class="btn btn-default btn-share">
-        <i class="icon icon-share"></i>
-        <span>share</span>
-      </a>
+      <div class="btn-group">
+        <a class="btn btn-default btn-share" data-toggle="dropdown">
+          <i class="icon icon-share"></i>
+          <span>share</span>
+        </a>
+        <ul class="dropdown-menu pull-right">
+          {% set adUrl = url('adstacy_app_ad_show', {id: ad.id}) %}
+          {% set tags = ad.tags|join(',') %}
+          {% set desc = remove_hashtag(ad.description) %} {# remove hashtags because # character is fragment in url #}
+          {% set twitterUrl = "https://twitter.com/share?url=#{adUrl}&text=#{desc}&hashtags=#{tags}" %}
+          {% set facebookUrl = "https://www.facebook.com/sharer/sharer.php?u=#{adUrl}" %}
+
+          <li><a href="{{ facebookUrl }}" class="btn btn-default facebook-share"><i class="icon icon-facebook"></i><span>facebook</span></a></li>
+          <li><a href="{{ twitterUrl }}" class="btn btn-default tweet"><i class="icon icon-twitter twitter-share"></i><span>twitter</span></a></li>
+        </ul>
+      </div>
       <div class="btn-group">
         <a class="btn btn-default btn-option" data-toggle="dropdown">
           <i class="icon icon-ads"></i>
@@ -82,10 +94,10 @@
     </div>
   </div>
 
-  <div class="advert-action-content">
+  {# <div class="advert-action-content">
     {% set adUrl = url('adstacy_app_ad_show', {id: ad.id}) %}
     {% set tags = ad.tags|join(',') %}
-    {% set desc = remove_hashtag(ad.description) %} {# remove hashtags because # character is fragment in url #}
+    {% set desc = remove_hashtag(ad.description) %}
     {% set twitterUrl = "https://twitter.com/share?url=#{adUrl}&text=#{desc}&hashtags=#{tags}" %}
     {% set facebookUrl = "https://www.facebook.com/sharer/sharer.php?u=#{adUrl}" %}
     <div class="advert-share btn-group btn-group-justified">
@@ -93,7 +105,7 @@
       <a href="{{ facebookUrl }}" class="btn btn-facebook facebook-share"><i class="icon icon-facebook"></i>Share</a>
       <a href="{{ twitterUrl }}" class="btn btn-twitter tweet"><i class="icon icon-twitter twitter-share"></i>Tweet</a>
     </div>
-  </div>
+  </div> #}
 
   <div class="advert-detail">
     <div class="advert-user clearfix">
