--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -108,6 +108,7 @@
                 <li><a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}" title="{{ "profile"|trans }}"><i class="icon icon-user"></i> {{ "profile"|trans }}</a></li>
                 <li><a href="{{ path('fos_user_profile_edit') }}" title="{{ "settings"|trans }}"><i class="icon icon-gear"></i> {{ "settings"|trans }}</a></li>
                 <li><a href="{{ path('fos_user_security_logout') }}" title="{{ "logout"|trans }}"><i class="icon icon-off"></i> {{ "logout"|trans }}</a></li>
+                <li><a href="{{ path('adstacy_app_who_to_follow') }}" title="{{ "find_friends"|trans }}"><i class="icon icon-frined"></i> {{ "find_friends"|trans }}</a></li>
               {% endif %}
             </ul>
             <ul>
