Fix advert-image thumb logic

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -30,6 +30,7 @@
   img {
     background: url(@loader-img) no-repeat center;
     .img-responsive();
+    margin: 0 auto;
   }
 }
 
@@ -118,6 +119,7 @@
 
 .advert-comments-container {
   border-top: 2px solid @border-color;
+  padding-top: 3px;
 }
 .advert-comments {
   padding: 5px 15px 10px 15px;
