Fix commentbox style.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -19,6 +19,25 @@
   }
 }
 
+.comment-box {
+  width: 100%;
+  display: block;
+  height: 32px;
+  padding: 2px 4px;
+  background-color: #eee;
+  resize: none;
+  border: 1px solid @border-color;
+  .border-bottom-radius(@border-radius-base);
+  overflow: hidden;
+  position: relative;
+
+  &:focus {
+    outline: 0;
+    background-color: #fff;
+  }
+}
+
+
 .jscroll-added .advert:first-child {
   margin-top: 15px;
 }
