--- a/src/Adstacy/AppBundle/Resources/public/less/variables.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/variables.less
@@ -13,6 +13,8 @@
 @text-primary:                #333;
 @text-secondary:              #888;
 
+@bootstrap-blue:              #428bca;
+
 @border-primary:              #ddd;
 @border-secondary:            #ccc;
 @border-color:                #ccc;
