Select url on share click.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -130,6 +130,8 @@
     background-color: #b00;
     color: #fff;
     padding: 5px;
+    border: 0;
+    width: 100%;
   }
 
   .advert-share, .advert-comment {
