--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -98,7 +98,7 @@
     {% set twitterUrl = "https://twitter.com/share?url=#{adUrl}&text=#{desc}&hashtags=#{tags}" %}
     {% set facebookUrl = "https://www.facebook.com/sharer/sharer.php?u=#{adUrl}" %}
     <div class="advert-share btn-group btn-group-justified">
-      <p class="url">{{ url('adstacy_app_ad_show', {id: ad.id}) }}</p>
+      <input type="text" readonly="readonly" class="url" value="{{ url('adstacy_app_ad_show', {id: ad.id}) }}">
       <a href="{{ facebookUrl }}" class="btn btn-facebook facebook-share"><i class="icon icon-facebook"></i>Share</a>
       <a href="{{ twitterUrl }}" class="btn btn-twitter tweet"><i class="icon icon-twitter twitter-share"></i>Tweet</a>
     </div>
@@ -131,7 +131,7 @@
     {% if commentsLeft > 0 %}
       {% set lastId = _comments[0].id %}
       <div class="load-more-comments">
-        <a href="#" data-href="{{ path('adstacy_api_ad_comments', {id: ad.id, until: lastId}) }}">
+        <a href="javascript:;" data-href="{{ path('adstacy_api_ad_comments', {id: ad.id, until: lastId}) }}">
           {{"comment.load_more"|trans({'%count%': commentsLeft})|raw}}
         </a>
       </div>
