--- a/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
@@ -61,13 +61,7 @@
   {{ parent() }}
   <script type="text/javascript">
     $(function() {
-      $('.jscroll').jscroll({
-        callback: function() {
-          var $ads = $('.jscroll-added:last .advert');
-          $ads.find('img.lazy').lazyload();
-          $ads.ajaxlink('ads');
-        }
-      });
+      $('.jscroll').jscroll(Adstacy.options.jscrollAd);
     });
   </script>
 {% endblock %}
