--- a/src/Adstacy/AppBundle/Resources/views/User/show_ads.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_ads.html.twig
@@ -37,13 +37,7 @@
   <script type="text/javascript">
     $(function() {
       $('#user-profile').ajaxlink('follow_single');
-      $('.jscroll').jscroll({
-        callback: function() {
-          var $ads = $('.jscroll-added:last .advert');
-          $ads.find('img.lazy').lazyload();
-          $ads.ajaxlink('ads');
-        }
-      });
+      $('.jscroll').jscroll(Adstacy.options.jscrollAd);
     });
   </script>
 {% endblock %}
