--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -5,6 +5,7 @@
   background: #fff;
   margin: 15px auto 0;
   border: 1px solid @border-color;
+  border-radius: 5px;
   // .box-shadow(0 1px 1px @gray-light);
 
   &:first-child {
@@ -18,6 +19,12 @@
     text-transform: uppercase;
   }
 
+}
+.advert-img {
+  border-radius: 5px 5px 0 0;
+  img.full {
+    border-radius: 5px 5px 0 0;
+  }
 }
 .delete-comment {
   color: #999;
@@ -69,6 +76,9 @@
 
 .advert-tags {
   margin-top: 5px;
+  a {
+    color: #777;
+  }
 }
 
 .advert-detail {
