move deps file to module.

--- a/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
@@ -56,18 +56,18 @@
 @import "./navbar.less";
 @import "./base/layout.less";
 
-@import "./module/image-preview.less";
-@import "./module/dropdown-box.less";
-@import "./module/social-buttons-3.less";
-
 @import "./layout/site-header.less";
 @import "./layout/ad.less";
 @import "./layout/feeds.less";
 @import "./layout/show_ad.less";
 @import "./layout/user.less";
 @import "./layout/notification.less";
-@import "./jquery.mentionsInput.less";
-@import "./typeahead-bootstrap.less";
+
+@import "./module/image-preview.less";
+@import "./module/dropdown-box.less";
+@import "./module/social-buttons-3.less";
+@import "./module/typeahead-bootstrap.less";
+@import "./module/jquery.mentionsInput.less";
 
 @import (less) "../css/mention.css";
 @import (less) "../css/adstacy.css";
