--- a/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
@@ -52,8 +52,8 @@
 
         <div id="create-advert-desc">
           {{ form_widget(form.description) }}
-          <div class="clearfix">
-            <div id="create-advert-tags" class="pull-left">
+          <div id="create-advert-tags">
+            <div class="pull-left">
               <i class="icon icon-tags"></i>
             </div>
             {{ form_widget(form.tags) }}
