assign mention input to new jscroll element.

--- a/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
@@ -66,6 +66,16 @@
           var $ads = $('.jscroll-added:last .advert');
           $ads.find('img.lazy').lazyload();
           $ads.ajaxlink('ads');
+
+          $ads.find('textarea.comment-box').mentionsInput({
+            onDataRequest: function (mode, query, triggerChar, callback) {
+              $.getJSON(Routing.generate('adstacy_api_users', {q: query}), function(data) {
+                data = _.filter(data, function(item) { return item.username.toLowerCase().indexOf(query.toLowerCase()) > -1 });
+
+                callback.call(this, data);
+              });
+            }
+          });
         }
       });
     });
