--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -3,12 +3,12 @@
 }
 .user {
   width: 100%;
-  margin: 5px 7px 0 7px;
-  padding: 5px 10px;
+  margin: 0 auto 10px;
+  padding: 10px;
 
   .profile-picture {
     float: left;
-    margin-right: 15px;
+    margin-right: 10px;
 
     img {
       border-radius: 3px;
