--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -18,10 +18,11 @@
   }
   .user-detail {
     float: left;
-    width: 70%;
+    width: 280px;
   }
   .user-actions {
     float: left;
+    width: 80px;
   }
   .user-info {
     margin-bottom: 5px;
@@ -41,6 +42,7 @@
   }
   .btn {
     padding: 4px 10px;
+    width: 100%;
   }
 }
 
