fix search bar btn and create ad tag.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -23,7 +23,7 @@
   }
 
   .twitter-typeahead {
-    width: 100%;
+    // width: 100%;
   }
 
   .bootstrap-tagsinput {
@@ -35,7 +35,6 @@
     .tt-hint,
     .tt-query {
       padding: 4px;
-      width: 100% !important;
     }
   }
 
