--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -243,6 +243,7 @@ body {
   position: absolute;
   width: 20px;
   line-height: @navbar-height;
+  top: 0;
   right: 15px;
 
   .icon-search:before {
