--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -37,6 +37,7 @@
     {% block stylesheets %}
       {% stylesheets filter='cssrewrite, uglifycss'
         'bundles/adstacyapp/less/adstacy.less'
+        'bundles/adstacyapp/css/perfect-scrollbar.css'
       %}
         <link href="{{ asset_url }}" type="text/css" rel="stylesheet">
       {% endstylesheets %}
@@ -45,12 +46,10 @@
     {% block head_scripts %}
       {% if not app.debug %}
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js" type="text/javascript"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type="text/javascript"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js" type="text/javascript"></script>
       {% else %}
         {% javascripts filter='uglifyjs2'
           '@AdstacyAppBundle/Resources/public/js/jquery.min.js'
-          '@AdstacyAppBundle/Resources/public/js/jquery-ui.js'
           '@AdstacyAppBundle/Resources/public/js/bootstrap.min.js'
         %}
           <script src="{{ asset_url }}" type="text/javascript"></script>
@@ -62,7 +61,8 @@
         '@AdstacyAppBundle/Resources/public/js/underscore-min.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.elastic.source.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.mentionsInput.js'
-        '@AdstacyAppBundle/Resources/public/js/jquery.slimscroll.min.js'
+        '@AdstacyAppBundle/Resources/public/js/jquery.mousewheel.js'
+        '@AdstacyAppBundle/Resources/public/js/perfect-scrollbar.js'
         '@AdstacyAppBundle/Resources/public/js/easing.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.ui.totop.min.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.lazyload.min.js'
