--- a/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
@@ -8,7 +8,6 @@
     'bundles/adstacyapp/less/module/wysihtml5.less'
     'bundles/adstacyapp/css/jquery.fileupload.css'
     'bundles/adstacyapp/css/jquery.fileupload-ui.css'
-    'bundles/adstacyapp/css/jquery-ui.css'
   %}
     <link href="{{ asset_url }}" type="text/css" rel="stylesheet">
   {% endstylesheets %}
@@ -105,6 +104,7 @@
 {% block javascripts %}
   {{ parent()  }}
   {% javascripts filter='uglifyjs2'
+    '@AdstacyAppBundle/Resources/public/js/jquery.ui.widget.js'
     '@AdstacyAppBundle/Resources/public/js/bootstrap-tagsinput.js'
     '@AdstacyAppBundle/Resources/public/js/wysihtml5_parser_rules_advanced.js'
     '@AdstacyAppBundle/Resources/public/js/wysihtml5.js'
