Style search form suggestion

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -221,6 +221,10 @@ body {
     border-width: 0 0 2px;
     outline: none;
   }
+  .tt-dropdown-header {
+    border-top: 1px solid #ccc;
+    background-color: #eee;
+  }
 }
 
 #btn-search {
