Style search suggestion and fix javascript.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -224,6 +224,13 @@ body {
   .tt-dropdown-header {
     border-top: 1px solid #ccc;
     background-color: #eee;
+    font-size: 13px;
+    text-align: left;
+    font-weight: bold;
+    color: #777;
+  }
+  .tt-suggestion a {
+    display: block;
   }
 }
 
