--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -36,6 +36,10 @@
     .tt-query {
       padding: 4px;
     }
+
+    .tag [data-role="remove"]:after {
+      content: "\00d7";
+    }
   }
 
   .pull-left {
