Style search suggestion.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -59,6 +59,12 @@ a.realname, a.username {
   font-weight: bold;
 }
 
+.avatar {
+  width: 32px;
+  height: 32px;
+  border-radius: 3px;
+}
+
 #user-profile {
   .media {
     padding: 10px;
