Add prefetching to mentionsInput.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -59,6 +59,8 @@
       {% javascripts filter='uglifyjs2'
         '@AdstacyAppBundle/Resources/public/js/modernizr.min.js'
         '@AdstacyAppBundle/Resources/public/js/underscore-min.js'
+        '@AdstacyAppBundle/Resources/public/js/json2.js'
+        '@AdstacyAppBundle/Resources/public/js/jstorage.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.elastic.source.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.mentionsInput.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.mousewheel.js'
