change create-advert style and responsiveness.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -99,6 +99,16 @@ a.mention:hover {
   width: 100%;
 }
 
+.btn-group-justified {
+  .btn {
+    border-width: 1px 0 1px 1px;
+
+    &:last-child {
+      border-width: 1px;
+    }
+  }
+}
+
 // .loader-img {
 //   width: 32px;
 //   height: 32px;
