--- a/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
@@ -16,87 +16,91 @@
 {% block navbar %}{% endblock %}
 
 {% block content %}
-  {% set data = form.vars.data %}
-  <div id="create-advert" class="panel panel-default">
-    <div class="panel-body clearfix">
-      <div id="create-advert-toolbar">
-        <a class="btn btn-default" id="choose-advert-image" href="#"><i class="icon icon-picture"></i> image</a>
-        <a class="btn btn-default" id="choose-advert-text" href="#"><i class="icon icon-edit"></i> text</a>
-        <a class="btn btn-default" id="choose-advert-video" href="#"><i class="icon icon-youtube-play"></i> video</a>
-      </div>
-      {{ form_start(form, {attr: {class: 'submit-disable'}}) }}
-      {{ form_errors(form) }}
-      <div class="form-content-container">
-        <a id="create-advert-image-trigger" data-toggle="modal" data-target="#create-advert-image-modal" class="{% if data.type != 'image' %}hide{% endif %}">
-          {{"form_ad.image_trigger"|trans}}
-        </a>
-        <div id="create-advert-text" class="{% if data.type != 'text' %}hide{% endif %}">
-          {{ form_widget(form.title, {attr: {class: 'form-control'}}) }}
+  <div class="site-body">
+    {% set data = form.vars.data %}
+    <div id="create-advert" class="item panel panel-default">
+      <div class="panel-body clearfix">
+        <div id="create-advert-toolbar" class="btn-group btn-group-justified">
+          <a class="btn btn-default" id="choose-advert-image" href="#"><i class="icon icon-picture"></i> image</a>
+          <a class="btn btn-default" id="choose-advert-text" href="#"><i class="icon icon-edit"></i> text</a>
+          <a class="btn btn-default" id="choose-advert-video" href="#"><i class="icon icon-youtube-play"></i> video</a>
         </div>
-        <div id="create-advert-video" class="{% if data.type != 'youtube' %}hide{% endif %}">
-          {{ form_widget(form.youtubeUrl, {attr: {class: 'form-control'}}) }}
-          <div id="ytplayer">
-
+        {{ form_start(form, {attr: {class: 'submit-disable'}}) }}
+        {{ form_errors(form) }}
+        <div class="form-content-container">
+          <a id="create-advert-image-trigger" data-toggle="modal" data-target="#create-advert-image-modal" class="{% if data.type != 'image' %}hide{% endif %}">
+            {{"form_ad.image_trigger"|trans}}
+          </a>
+          <div id="create-advert-text" class="{% if data.type != 'text' %}hide{% endif %}">
+            {{ form_widget(form.title, {attr: {class: 'form-control'}}) }}
           </div>
-        </div>
-        <div class="image-preview medium {% if data.type != 'image' %}hide{% endif %}">
-          {% if data.image %}
-            <img id="image-preview-img" src="{{ vich_uploader_asset(data, 'image') }}">
-          {% endif %}
-        </div>
-        {% set images = data.images %}
-        <div id="create-advert-images" class="{% if data.type != 'image' or (data.type == 'image' and images|length <= 0) %}hide{% endif %}">
-          {{ form_widget(form.images) }}
-        </div>
+          <div id="create-advert-video" class="{% if data.type != 'youtube' %}hide{% endif %}">
+            {{ form_widget(form.youtubeUrl, {attr: {class: 'form-control'}}) }}
+            <div id="ytplayer">
 
-        <div id="create-advert-desc">
-          {{ form_widget(form.description) }}
-          <div id="create-advert-tags">
-            <div class="pull-left">
-              <i class="icon icon-tags"></i>
             </div>
-            {{ form_widget(form.tags) }}
           </div>
-          {{ form_widget(form.images) }}
-        </div>
+          <div class="image-preview medium {% if data.type != 'image' %}hide{% endif %}">
+            {% if data.image %}
+              <img id="image-preview-img" src="{{ vich_uploader_asset(data, 'image') }}">
+            {% endif %}
+          </div>
+          {% set images = data.images %}
+          <div id="create-advert-images" class="{% if data.type != 'image' or (data.type == 'image' and images|length <= 0) %}hide{% endif %}">
+            {{ form_widget(form.images) }}
+          </div>
 
-        <div class="modal fade" id="create-advert-image-modal" tabindex="-1">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">{{"form_ad.upload_image_title"|trans}}</h>
+          <div id="create-advert-desc">
+            {{ form_widget(form.description) }}
+            <div id="create-advert-tags">
+              <div class="pull-left">
+                <i class="icon icon-tags"></i>
               </div>
-              <div class="modal-body">
-                <div id="progressbar">
+              {{ form_widget(form.tags) }}
+            </div>
+            {{ form_widget(form.images) }}
+          </div>
+
+          <div class="modal fade" id="create-advert-image-modal" tabindex="-1">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  <h4 class="modal-title">{{"form_ad.upload_image_title"|trans}}</h>
                 </div>
-                <div id="upload-image-container">
-                  <p class="help">{{"form_ad.help.upload_from_computer"|trans}}</p>
-                  <div id="create-advert-image">
+                <div class="modal-body">
+                  <div id="progressbar">
+                  </div>
+                  <div id="upload-image-container">
+                    <p class="help">{{"form_ad.help.upload_from_computer"|trans}}</p>
+                    <div id="create-advert-image">
                       {{ form_widget(form.image) }}
-                  </div>
-                  <p class="big-center-text">{{"or"|trans}}</p>
-                  <p class="help">{{"form_ad.help.upload_from_url"|trans}}</p>
-                  <div class="clearfix">
-                    <input type="url" class="form-control" id="create-advert-url" name="url" placeholder="{{'form_ad.placeholders.url'|trans}}">
-                    <button type="button" class="btn btn-primary" id="create-advert-url-ok">OK</button>
+                    </div>
+                    <p class="big-center-text">{{"or"|trans}}</p>
+                    <p class="help">{{"form_ad.help.upload_from_url"|trans}}</p>
+                    <div class="input-group">
+                      <input type="url" class="form-control" id="create-advert-url" name="url" placeholder="{{'form_ad.placeholders.url'|trans}}">
+                      <span class="input-group-btn">
+                        <button type="button" class="btn btn-primary" id="create-advert-url-ok">OK</button>
+                      </span>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
+        {{ form_widget(form.save, {
+            attr: {
+              'class': 'pull-right btn btn-primary submit-disable-btn',
+              'data-disable-text': "saving"|trans
+            }
+          })
+        }}
+        {{ form_widget(form.imagename) }}
+        {{ form_rest(form) }}
+        {{ form_end(form) }}
       </div>
-      {{ form_widget(form.save, {
-          attr: {
-            'class': 'pull-right btn btn-primary submit-disable-btn',
-            'data-disable-text': "saving"|trans
-          }
-        })
-      }}
-      {{ form_widget(form.imagename) }}
-      {{ form_rest(form) }}
-      {{ form_end(form) }}
     </div>
   </div>
 {% endblock %}
