Add border-left on site-menu

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -37,7 +37,7 @@ body {
   height: ~"@{height}";
   border: solid @border-color;
   border-top-color: @brand-primary;
-  border-width: 2px 1px 0 0;
+  border-width: 2px 1px 0 1px;
   // margin-top: -2px;
   overflow: hidden;
   z-index: @zindex-navbar-fixed;
